# abduction-demo

./: .gitignore  ENHANCEMENTS.md  LICENSE  README.md  analysis.ipynb  main_dspy.py  pyproject.toml  run_experiment.py
data/: classes.txt  notes.json
data/labels/: cat.txt  dog.txt
docs/: index.html
docs/static/css/: index.css
docs/static/js/: index.js
result-prompts/: coding.pl  feature-list.txt  grounding.json  grounding_example.json  reasoning.md
results/experiment/: experiment_results.jsonl
src/: __init__.py  config.py  data.py  img_utils.py  test_pipeline.py  validation.py
src/preprocessing/: __init__.py  cnn_classifier.py  image_enhancer.py  preprocessing_pipeline.py  xai_explainer.py
